examples/type_errors/standalone_type.roto
filter foo {
	define {
		rx msg: U32;
		a = String;
	}
}
